--- a/AzaHub/Quincy.html
+++ b/AzaHub/Quincy.html
@@ -35,6 +35,12 @@
 
 
             </tr>
+            <tr>
+                <td>hateful</td>
+                <td>fearful</td>
+
+
+            </tr>
 
 
 
