added changes to html

--- a/AzaHub/Quincy.html
+++ b/AzaHub/Quincy.html
@@ -31,13 +31,13 @@
             </tr>
             <tr>
                 <td>very loving</td>
-                <td>very hype</td>
+                <td>very happy and hyper</td>
 
 
             </tr>
             <tr>
                 <td>hateful</td>
-                <td>fearful</td>
+                <td>lovely</td>
 
 
             </tr>
